Tweaking constraints in tableView cell

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -102,7 +102,7 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="0Zi-2b-dnV">
                                             <rect key="frame" x="8" y="8" width="398" height="113"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="213" translatesAutoresizingMaskIntoConstraints="NO" id="JRU-yp-0Ps">
+                                                <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" distribution="fillProportionally" spacing="213" translatesAutoresizingMaskIntoConstraints="NO" id="JRU-yp-0Ps">
                                                     <rect key="frame" x="0.0" y="0.0" width="398" height="24"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oTH-uJ-OAK">
@@ -118,6 +118,9 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="Vbc-iT-IlA" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="oTH-uJ-OAK" secondAttribute="trailing" constant="8" id="o4H-YJ-05i"/>
+                                                    </constraints>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9F-0r-ndE">
                                                     <rect key="frame" x="0.0" y="28" width="398" height="85"/>
