--- a/Journal/Journal/View/Base.lproj/Main.storyboard
+++ b/Journal/Journal/View/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -99,19 +100,19 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="xRn-Ia-xF9">
-                                            <rect key="frame" x="20" y="18" width="374" height="47.5"/>
+                                            <rect key="frame" x="20" y="11" width="374" height="61"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="238" translatesAutoresizingMaskIntoConstraints="NO" id="A9q-S5-sUF">
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="A9q-S5-sUF">
                                                     <rect key="frame" x="0.0" y="0.0" width="374" height="24"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="foT-E6-Rk0">
-                                                            <rect key="frame" x="0.0" y="0.0" width="42" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="foT-E6-Rk0">
+                                                            <rect key="frame" x="0.0" y="0.0" width="187" height="24"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date and Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nql-Mz-rRu">
-                                                            <rect key="frame" x="280" y="0.0" width="94" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date and Time" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nql-Mz-rRu">
+                                                            <rect key="frame" x="195" y="0.0" width="179" height="24"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -119,7 +120,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Excerpt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QA4-2z-skI">
-                                                    <rect key="frame" x="0.0" y="28" width="374" height="19.5"/>
+                                                    <rect key="frame" x="0.0" y="28" width="374" height="33"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -128,8 +129,10 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="xRn-Ia-xF9" firstAttribute="centerX" secondItem="DVh-dO-DUl" secondAttribute="centerX" id="Ttl-T7-pb7"/>
-                                        <constraint firstItem="xRn-Ia-xF9" firstAttribute="centerY" secondItem="DVh-dO-DUl" secondAttribute="centerY" id="fbp-Bw-1xG"/>
+                                        <constraint firstItem="xRn-Ia-xF9" firstAttribute="trailing" secondItem="DVh-dO-DUl" secondAttribute="trailingMargin" id="NyF-09-rDQ"/>
+                                        <constraint firstItem="xRn-Ia-xF9" firstAttribute="top" secondItem="DVh-dO-DUl" secondAttribute="topMargin" id="VI4-KX-zBb"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="xRn-Ia-xF9" secondAttribute="bottom" id="bRL-O0-amP"/>
+                                        <constraint firstItem="xRn-Ia-xF9" firstAttribute="leading" secondItem="DVh-dO-DUl" secondAttribute="leadingMargin" id="vkV-KX-4Vg"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
